// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`node integration > command integration renders interpreted errors > command error 1`] = `
"Command failed
	COMMAND: root db seed
	OPTION: --force
✖ expected option without value --force but received "true"
	↳ Option "force" does not accept a value."
`;

exports[`node integration > command integration with nested help and execute > help command 1`] = `
"COMMAND: db
	DESCRIPTION:
	Database commands
	COMMAND: help-db
	COMMAND: seed
		DESCRIPTION:
		Seed a target
		OPTIONS:
		 - force: -f, --force
		  force execution
		 - str: --str [string]
		  test option
		 ARGUMENTS: <src>
		 - src: string"
`;

exports[`node integration > command integration with nested help and execute > help root 1`] = `
"COMMAND: root
	COMMAND: db
		DESCRIPTION:
		Database commands
		COMMAND: help-db
		COMMAND: seed
			DESCRIPTION:
			Seed a target
			OPTIONS:
			 - force: -f, --force
			  force execution
			 - str: --str [string]
			  test option
			 ARGUMENTS: <src>
			 - src: string"
`;

exports[`node integration > command integration with nested help and execute > help sub-command 1`] = `"COMMAND: help-db"`;
